[package]
name = "rust-test"
version = "0.1.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = "0.9.19"
select = "0.4.3"
url = "1.7.2"
error-chain = "0.12.1"
env_proxy = "0.3"